# lammyOPenglFFmpegVideoPlayer-2

./: README.md
app/: CMakeLists.txt  build.gradle
app/libs/include/libavformat/: avformat.h
app/src/androidTest/java/com/example/lammyopenglffmpegvideoplayer2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DataManager.cpp  FFMDemux.cpp  FFMResample.cpp  FFMVideoShow.cpp  FFMdecode.cpp  OpenSLESAudioPlayer.cpp
app/src/main/cpp/Opengl/: GLProgram.cpp  ILammyOpenglVideoPlayer.cpp  LEGL.cpp  LammyOpenglVideoPlayer.cpp  OpenglShow.cpp  utils.cpp
app/src/main/cpp/include/: DataManager.h  FFMDemux.h  FFMResample.h  FFMVideoShow.h  FFMdecode.h  FFMpeg.h  GLProgram.h  LEGL.h  LammyOpenglVideoPlayer.h  Log.h  OpenSLESAudioPlayer.h  OpenglShow.h  ggl.h  utils.h
app/src/main/java/com/example/lammyopenglffmpegvideoplayer2/: ILammyOpenglVideoPlayer.java  LammyOpenglVideoPlayerView.java  MainActivity.java  VideoPlayerActivity.java
app/src/main/res/layout/: activity_video_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/lammyopenglffmpegvideoplayer2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
